(fix) inline-code text spacing

--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -69,11 +69,13 @@
 }
 
 .text-inline-code {
+	display: inline-block;
 	font-size: 12px;
 	color: var(--chat-markdown-color);
 	background: var(--chat-markdown-bg);
 	border: 1px solid var(--chat-markdown-border);
 	border-radius: 3px;
+	margin: 2px 0;
 	padding: 2px 3px;
 }
 
